--- a/resultados.html
+++ b/resultados.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/resultados.css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Búsqueda</title>
 </head>
 <body>
     <div class="grid-container">
