--- a/todotraks.html
+++ b/todotraks.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todos los Albumes</title>
+    <title>Todos los Artistas</title>
     <link rel="stylesheet" href="css/todoartis.css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
 </head>
@@ -11,9 +11,9 @@
     <div class="grid-container">
         <ul>
         <li><a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a></li>
-        <li><a class="titulos" href="tracks.html">TRACKS</a></li>
+        <li><a class="titulos" href="todotraks.html">TRACKS</a></li>
         <li><a class="titulos" href="todoalbumes.html">ÁLBUM</a></li>
-        <li><a class="titulos" href="artistastodos.html">ARTIST</a></li>
+        <li><a class="titulos" href="todosArtistas.js">ARTIST</a></li>
         <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
         </ul>
     </div>
@@ -32,7 +32,6 @@
           </ul>
         </div>
     </footer>
-
     <script src="todotraks.js"></script>
 </body>
 </html>
