--- a/todotraks.html
+++ b/todotraks.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todos los Artistas</title>
+    <title>Todos los Tracks</title>
     <link rel="stylesheet" href="css/todoartis.css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="grid-container">
         <ul>
-        <li><a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a></li>
-        <li><a class="titulos" href="todotraks.html">TRACKS</a></li>
-        <li><a class="titulos" href="todoalbumes.html">ÁLBUM</a></li>
-        <li><a class="titulos" href="todosArtistas.js">ARTIST</a></li>
-        <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
-        </ul>
+            <li><a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a></li>
+            <li><a class="titulos" href="todotraks.html">TRACKS</a></li>
+            <li><a class="titulos" href="todoalbumes.html">ÁLBUM</a></li>
+            <li><a class="titulos" href="artistastodos.html">ARTIST</a></li>
+            <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
+          </ul> 
     </div>
     <section class="foto-bandas">
         <div class="fotos">
@@ -32,6 +32,6 @@
           </ul>
         </div>
     </footer>
-    <script src="todotraks.js"></script>
+    <script src="JAVA SCRIPT/todotraks.js"></script>
 </body>
 </html>
