--- a/tracks.html
+++ b/tracks.html
@@ -10,12 +10,12 @@
 <body>
     <div class="grid-container">
         <ul>
-        <li><a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a></li>
-        <li><a class="titulos" href="tracks.html">TRACKS</a></li>
-        <li><a class="titulos" href="albums.html">ÁLBUM</a></li>
-        <li><a class="titulos" href="artistastodos.html">ARTIST</a></li>
-        <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
-        </ul>
+            <li><a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a></li>
+            <li><a class="titulos" href="todotraks.html">TRACKS</a></li>
+            <li><a class="titulos" href="todoalbumes.html">ÁLBUM</a></li>
+            <li><a class="titulos" href="artistastodos.html">ARTIST</a></li>
+            <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
+          </ul> 
     </div>
     <div class="orden">
         <header class="principio">
