no pued centrar algo me toy volviendo lok

--- a/index.html
+++ b/index.html
@@ -212,7 +212,9 @@
    <footer class="footer">
       <div class="futer">
         <ul class="fin">
-          <li class="contenido-footer">Deezer</li>
+          <li class="redes-footer"><img class="logoDeezer" src="img/logodeezer.png" alt=""></li>
+          <li class="redes-footer">Twitter</li>
+          <li class="redes-footer">Instagram</li>
           <li class="contenido-footer">Catalina Rosella</li>
           <li class="contenido-footer">Nataly Yemal</li>
           <li class="contenido-footer">Valentina Drechsler</li>
