--- a/playlist.html
+++ b/playlist.html
@@ -22,6 +22,13 @@
         <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
       </ul> 
 </div>
+<div class="buscador">
+    <h1 class="ocultar">Buscador</h1>
+    <form action="resultados.html" method="GET">
+        <input class='buscar' type="text" name="search" placeholder="¿Qué querés buscar?">
+        <button class='boton-buscador' type="submit">Buscar</button>
+    </form>
+  </div>
 <div class="titplaylist">
     <h2>MY PLAYLIST</h2>
 </div>
@@ -179,7 +186,9 @@
 <footer class="footer">
     <div class="futer">
       <ul class="fin">
-        <li class="contenido-footer">Deezer</li>
+        <li class="redes-footer"><img class="logoDeezer" src="img/logodeezer.png" alt=""></li>
+        <li class="redes-footer">Twitter</li>
+        <li class="redes-footer">Instagram</li>
         <li class="contenido-footer">Catalina Rosella</li>
         <li class="contenido-footer">Nataly Yemal</li>
         <li class="contenido-footer">Valentina Drechsler</li>
