--- a/tracks.html
+++ b/tracks.html
@@ -17,6 +17,13 @@
             <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
           </ul> 
     </div>
+    <div class="buscador">
+        <h1 class="ocultar">Buscador</h1>
+        <form action="resultados.html" method="GET">
+            <input class='buscar' type="text" name="search" placeholder="¿Qué querés buscar?">
+            <button class='boton-buscador' type="submit">Buscar</button>
+        </form>
+      </div>
     <div class="orden">
         <header class="principio">
             <h1 class="titulo"></h1>
@@ -30,7 +37,9 @@
     <footer class="footer">
         <div class="futer">
           <ul class="fin">
-            <li class="contenido-footer">Deezer</li>
+            <li class="redes-footer"><img class="logoDeezer" src="img/logodeezer.png" alt=""></li>
+            <li class="redes-footer">Twitter</li>
+            <li class="redes-footer">Instagram</li>
             <li class="contenido-footer">Catalina Rosella</li>
             <li class="contenido-footer">Nataly Yemal</li>
             <li class="contenido-footer">Valentina Drechsler</li>
