--- a/playlist.html
+++ b/playlist.html
@@ -34,7 +34,7 @@
 </div>
 <div class="playlist">
     <ul class="playlistWrapper">
-    <li><img class= "fotoartista" src="" alt="" srcset=""></li>
+    <!-- <li><img class= "fotoartista" src="" alt="" srcset=""></li>
     <li class="encabezado">Canción</li>
     <li class="encabezado">Artista </li>
     <li class="encabezado">Álbum</li>
@@ -178,7 +178,7 @@
             <li><a href="audio/Camila Cabello - Never Be the Same.mp3" target="_blank"><img class="fotoartista"  src="img/camilacabello.png" alt="camilacabello"></a></li>
             <li>Never Be the Same <br>Camila Cabello</li>
             <li><a href="audio/Sam Smith - Too Good At Goodbyes (Official Video).mp3" target="_blank"><img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith"></a></li>
-            <li>To good at goodbyes <br> Sam Smith</li>
+            <li>To good at goodbyes <br> Sam Smith</li> -->
         </ul>
     </div>
 </section>
