--- a/todotraks.html
+++ b/todotraks.html
@@ -25,6 +25,22 @@
       </form>
     </div>
     <section class="foto-bandas">
+      <h1>Home page Tops</h1>
+    <p><a href="playlist.html">Mi playlist</a></p>
+    <section>
+        <article>
+            <h2>Top tracks</h2>
+            <ul class="tracks"></ul>
+        </article>
+        <article>
+            <h2>Top artists</h2>
+            <ul class="artists"></ul>
+        </article>
+        <article>
+            <h2>Top album</h2>
+            <ul class="album"></ul>
+        </article>
+    </section>
         <div class="fotos">
         </div>
     </section>
@@ -42,6 +58,6 @@
       </div>
    </footer>
 
-    <script src="JAVA SCRIPT/todotraks.js"></script>
+    <script src="todotraks.js"></script>
 </body>
 </html>
