--- a/tracks.html
+++ b/tracks.html
@@ -34,6 +34,20 @@
             <img class="weeknd" src="" alt="" srcset="">
         </header>
     </div>
+    <!-- aca -->
+    <h1>Escuchando...</h1>
+    <h2 class="titulo"></h2>   
+    <h3 class="interprete">banda: </h3>
+    <p class="album">Álbum al que petenece: </p>
+
+    <p><a href="" class="agregar">Agregar a playlist</a></p>
+    <p><a href="todotraks.html">Volver a tops</a></p>
+    <p><a href="playlist.html">Ver playlist</a></p>
+
+    <iframe scrolling="no" frameborder="0" allowTransparency="true"
+        src="" width="700" height="350">
+    </iframe>
+    <!-- hasta aca -->
     <footer class="footer">
         <div class="futer">
           <ul class="fin">
