--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="grid-container">
       <ul>
         <li><a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a></li>
-        <li><a class="titulos" href="todotraks.html">TRACKS</a></li>
+        <li><a class="titulos" href="todoslostracks.html">TRACKS</a></li>
         <li><a class="titulos" href="todoalbumes.html">ÁLBUM</a></li>
         <li><a class="titulos" href="artistastodos.html">ARTIST</a></li>
         <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
@@ -105,58 +105,19 @@
         <h2>TOP ARTISTS</h2>
         <ul class="artist">
             <!-- <li> <a href="detail.html" class="artista"></a></li> -->
-            <!-- <li> <a href="detail.html" class="artista">Drake</a></li> 
-            <li> <a href="detail.html" class="artista">Post Malone</a></li>
-            <li> <a href="detail.html" class="artista">Dua Lipa</a></li>
-            <li> <a href="detail.html" class="artista">Justin Bieber</a></li>
-            <li> <a href="detail.html" class="artista">Bad Bunny</a></li>
-            <li> <a href="detail.html" class="artista">Twntwy One Pilots</a></li>
-            <li> <a href="detail.html" class="artista">Maroon 5</a></li>
-            <li> <a href="detail.html" class="artista">Camila Cabello</a></li>
-            <li> <a href="detail.html" class="artista">Travis Scott</a></li>
-            <li> <a href="detail.html" class="artista">Imagine Dragons</a></li>
-            <li> <a href="detail.html" class="artista">Bruno Mars</a></li>
-            <li> <a href="detail.html" class="artista">Sam Smith</a></li>
-            <li> <a href="detail.html" class="artista">J Balvin</a></li> -->
+            
         </ul>
        </section>
        <section class="tracks">
        <h2>TOP ÁLBUMS</h2>
         <ul class= "informacion">
-            <!-- <li> <a href="detail.html" class="artista">After Hours (Deluxe)</a> </li>
-            <li> <a href="" class="artista"></a> Tossie Slide</li>
-            <li> <a href="" class="artista"></a> Hollywood´s Bleeding</li>
-            <li> <a href="" class="artista"></a> Futura Nostalgia</li>
-            <li> <a href="" class="artista"></a> Changes</li>
-            <li> <a href="" class="artista"></a> YHLQMDLG</li>
-            <li> <a href="" class="artista"></a> Blurryface</li>
-            <li> <a href="" class="artista"></a> Red Pill Blues (Deluxe)</li>
-            <li> <a href="" class="artista"></a> Romance</li>
-            <li> <a href="" class="artista"></a> ASTROWORLD</li>
-            <li> <a href="" class="artista"></a> Evolve</li>
-            <li> <a href="" class="artista"></a> 24K Magic</li>
-            <li> <a href="" class="artista"></a> In The Lonely Hour</li>
-            <li> <a href="" class="artista"></a> OASIS</li> -->
+            <!-- <li> <a href="detail.html" class="artista">After Hours (Deluxe)</a> </li> -->
         </ul>
        </section>
        <section class="tracks">
         <H2>TOP TRACKS</H2>
         <ul class="track">
-            <!-- <li> <a href="detail.html" class="artista">Blinding Lights</a></li>
-            <li> <a href="" class="artista"></a> Tossie Slide</li>
-            <li> <a href="" class="artista"></a> Circles </li>
-            <li> <a href="" class="artista"></a> Don´t Start Now</li>
-            <li> <a href="" class="artista"></a> Intentions (Feat. Quavo)</li>
-            <li> <a href="" class="artista"></a> Safarera</li>
-            <li> <a href="" class="artista"></a> Level of Concern </li>
-            <li> <a href="" class="artista"></a> Memories </li>
-            <li> <a href="" class="artista"></a> My Oh My (Feat. DaBaby)</li>
-            <li> <a href="" class="artista"></a> HIGHEST IN THE ROOM</li>
-            <li> <a href="" class="artista"></a> Beliver </li>
-            <li> <a href="" class="artista"></a> When I Was Your Man</li>
-            <li> <a href="" class="artista"></a> To Die For</li>
-            <li> <a href="" class="artista"></a> RITMO (Bad Boys For Life)</li>
-             -->
+            <!-- <li> <a href="detail.html" class="artista">Blinding Lights</a></li> -->
         </ul>
        </section>
        <section class="tracks">
@@ -168,45 +129,7 @@
    <section class="foto-bandas">
        <div class="fotos">
          <!-- <a href="detail.html"><img class="Theweeknd" src="img/theweekend.jpg" alt="Theweeknd" srcset=""></a>
-       </div>
-       <div class="fotos">
-        <a href="detail.html"><img class="Drake" src="img/drake (2).jpg" alt="drake" srcset=""></a>
-       </div>
-       <div class="PostMalone">
-        <a href="detail.html"><img src="img/postmalone.jpg" alt="postmalone" srcset=""></a>
-       </div>
-       <div class="DuaLipa">
-        <a href="detail.html"><img class="Dualipa" src="img/dualipa.jpg" alt="dualipa" srcset=""></a>
-       </div>
-       <div class="fotos">
-        <a href="detail.html"><img class="JustinBieber" src="img/justinbieber.jpg" alt="justinbieber" srcset=""></a>
-      </div>
-      <div class="fotos">
-        <a href="detail.html"><img class="Badbunny" src="img/badbunny.png" alt="badbunny" srcset=""></a>
-      </div>
-      <div class="fotos">
-        <a href="detail.html"><img class="Twenty" src="img/twentyonepilots.jpg" alt="twentyonepilots" srcset=""></a>
-      </div>
-      <div class="fotos">
-        <a href="detail.html"><img class="maroon5" src="img/maroon5 (2).jpg" alt="maroon5" srcset=""></a>
-      </div>
-      <div class="fotos">
-        <a href="detail.html"><img class="Camilacabello" src="img/camilacabello.png" alt="camilacabello" srcset=""></a>
-      </div>
-      <div class="fotos">
-        <a href="detail.html"><img class="Travisscott" src="img/travis.jpg" alt="Travisscott" srcset=""></a>
-      </div>
-      <div class="fotos">
-        <a href="detail.html"><img class="Imaginedragons" src="img/imaginedragons.jpg" alt="imaginedragons" srcset=""></a>
-      </div>
-      <div class="fotos">
-        <a href="detail.html"><img class="Brunomars" src="img/brunomars.jpg" alt="Brunomars" srcset=""></a>
-      </div>
-      <div class="fotos">
-        <a href="detail.html"><img class="Samsmith" src="img/samsmith.jpg" alt="samsmith" srcset=""></a>
-      </div>
-      <div class="fotos">
-        <a href="detail.html"><img class="jbalvin" src="img/jbalvin (2).jpg" alt="jbalvin" srcset=""></a> -->
+       </div>-->
       </div>
    </section>
    <footer class="footer">
