--- a/todoalbumes.html
+++ b/todoalbumes.html
@@ -11,7 +11,7 @@
     <div class="grid-container">
         <ul>
             <li><a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a></li>
-            <li><a class="titulos" href="todotraks.html">TRACKS</a></li>
+            <li><a class="titulos" href="todoslostracks.html">TRACKS</a></li>
             <li><a class="titulos" href="todoalbumes.html">ÁLBUM</a></li>
             <li><a class="titulos" href="artistastodos.html">ARTIST</a></li>
             <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
@@ -23,7 +23,7 @@
             <input class='buscar' type="text" name="search" placeholder="¿Qué querés buscar?">
             <button class='boton-buscador' type="submit">Buscar</button>
         </form>
-      </div>
+      </div>      
     <section class="foto-bandas">
         <div class="fotos">
         </div>
