--- a/resultados.html
+++ b/resultados.html
@@ -11,12 +11,14 @@
     <div class="grid-container">
         <ul>
             <li><a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a></li>
-            <li><a class="titulos" href="todotraks.html">TRACKS</a></li>
+            <li><a class="titulos" href="todoslostracks.html">TRACKS</a></li>
             <li><a class="titulos" href="todoalbumes.html">ÁLBUM</a></li>
             <li><a class="titulos" href="artistastodos.html">ARTIST</a></li>
             <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
           </ul> 
     </div>
+
+
 <h1>Resultados de búsqueda</h1> 
 
 <section class="foto-bandas"> 
