--- a/todoslostracks.html
+++ b/todoslostracks.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Album</title>
-    <link rel="stylesheet" href="css/detail.css">
+    <title>Todos los Albumes</title>
+    <link rel="stylesheet" href="css/todoartis.css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -24,28 +24,11 @@
             <button class='boton-buscador' type="submit">Buscar</button>
         </form>
       </div>
-    <div class="orden">
-        <header class="principio">
-            <h1 class="titulo"></h1>
-            <h2 class="artista"></h2>
-            <div class="descripcion">
-                <p></p>
-            </div>
-            <img class="weeknd" src="" alt="" srcset="">
-        </header>
-    </div>
-    
+    <section class="foto-bandas">
+        <div class="fotos">
+        </div>
+    </section>
 
-    <h2 class="populares">Populares</h2>
-    <div class="container">
-        <ul class="popular-song">
-            <!-- <li></li>
-            <li>2. In Your Eyes</li>
-            <li>3. After Hours</li>
-            <li>4. Save Your Tears</li>
-            <li>5. Heartless</li> --> 
-        </ul>
-    </div>
     <footer class="footer">
         <div class="futer">
           <ul class="fin">
@@ -59,6 +42,6 @@
         </div>
      </footer>
 
-    <script src="albums.js"></script>
+    <script src="todoslostracks.js"></script>
 </body>
 </html>
