--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="buscador">
   <h1 class="ocultar">Buscador</h1>
   <form action="resultados.html" method="GET">
-      <input class='buscar' type="text" name="search" placeholder="¿Qué querés buscar?">
+      <input class='buscar' type="text" name="search" placeholder="¿Qué querés buscar?" class="search">
       <button class='boton-buscador' type="submit">Buscar</button>
   </form>
 </div>
