--- a/resultados.html
+++ b/resultados.html
@@ -19,7 +19,8 @@
     </div>
 
 
-<h1>Resultados de búsqueda</h1> 
+<h1 class="display-resultados">Resultados de la Busqueda</h1> 
+<!-- <div id="spinner"></div>  -->
 
 <section class="foto-bandas"> 
     <div class="fotos">
