--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
       <button class='boton-buscador' type="submit">Buscar</button>
   </form>
 </div>
+<h1 class="display-resultados"></h1>
+<div class="main-detail-containter">
+      <ul class="lista">
+
+      </ul>
+      
+      
+    </div>
   <!-- <section>
     <div class="contenedor-form">
       <div class="toggle">
