--- a/playlist.html
+++ b/playlist.html
@@ -8,7 +8,6 @@
     <title>Playlist</title>
 </head>
 <body>
-</div>
 <div class="container">
     <header class="main-header">
     </header>
@@ -28,13 +27,43 @@
         <input class='buscar' type="text" name="search" placeholder="¿Qué querés buscar?">
         <button class='boton-buscador' type="submit">Buscar</button>
     </form>
-  </div>
+</div>
+
 <div class="titplaylist">
     <h2>MY PLAYLIST</h2>
 </div>
+
 <div class="playlist">
-    <ul class="playlistWrapper">
-    <!-- <li><img class= "fotoartista" src="" alt="" srcset=""></li>
+        <ul class="playlistWrapper">
+    
+        </ul>
+        <button class="agregar">Agregar a playlist</button>
+        <!-- <p><a href="todotraks.html">Volver a tops</a></p>
+        <button class="agregar">Agregar a playlist</button>
+        <button class="verPlaylist"><a href="playlist.html">Ver playlist</a></button>
+    
+        <iframe scrolling="no" frameborder="0" allowTransparency="true"
+            src="" width="700" height="92">
+        </iframe>    -->
+</div>
+<footer class="footer">
+    <div class="futer">
+      <ul class="fin">
+        <li class="redes-footer"><img class="logoDeezer" src="img/logodeezer.png" alt=""></li>
+        <li class="redes-footer"><a class="redes-footer" href="https://twitter.com/deezer?lang=es">Twitter</a></li>
+        <li class="redes-footer"><a class="redes-footer" href="https://www.instagram.com/deezer/?hl=es-la">Instagram</a></li>
+        <li class="redes-footer"><a class="redes-footer" href="https://www.facebook.com/DeezerLatino/?brand_redir=173259534981">Facebook</a></li>
+        <li class="contenido-footer">Catalina Rosella</li>
+        <li class="contenido-footer">Nataly Yemal</li>
+        <li class="contenido-footer">Valentina Drechsler</li>
+      </ul>
+    </div>
+ </footer>
+<script src="playlist.js"></script>
+</body>
+</html>
+
+<!-- <li><img class= "fotoartista" src="" alt="" srcset=""></li>
     <li class="encabezado">Canción</li>
     <li class="encabezado">Artista </li>
     <li class="encabezado">Álbum</li>
@@ -179,22 +208,3 @@
             <li>Never Be the Same <br>Camila Cabello</li>
             <li><a href="audio/Sam Smith - Too Good At Goodbyes (Official Video).mp3" target="_blank"><img class="fotoartista"  src="img/samsmith.jpg" alt="samsmith"></a></li>
             <li>To good at goodbyes <br> Sam Smith</li> -->
-        </ul>
-    </div>
-</section>
-</div>
-<footer class="footer">
-    <div class="futer">
-      <ul class="fin">
-        <li class="redes-footer"><img class="logoDeezer" src="img/logodeezer.png" alt=""></li>
-        <li class="redes-footer">Twitter</li>
-        <li class="redes-footer">Instagram</li>
-        <li class="contenido-footer">Catalina Rosella</li>
-        <li class="contenido-footer">Nataly Yemal</li>
-        <li class="contenido-footer">Valentina Drechsler</li>
-      </ul>
-    </div>
- </footer>
-<script src="playlist.js"></script>
-</body>
-</html>
