--- a/todoslostracks.html
+++ b/todoslostracks.html
@@ -33,11 +33,12 @@
         <div class="futer">
           <ul class="fin">
             <li class="redes-footer"><img class="logoDeezer" src="img/logodeezer.png" alt=""></li>
-            <li class="redes-footer">Twitter</li>
-            <li class="redes-footer">Instagram</li>
-            <li class="contenido-footer">Catalina Rosella</li>
-            <li class="contenido-footer">Nataly Yemal</li>
-            <li class="contenido-footer">Valentina Drechsler</li>
+        <li class="redes-footer"><a class="redes-footer" href="https://twitter.com/deezer?lang=es">Twitter</a></li>
+        <li class="redes-footer"><a class="redes-footer" href="https://www.instagram.com/deezer/?hl=es-la">Instagram</a></li>
+        <li class="redes-footer"><a class="redes-footer" href="https://www.facebook.com/DeezerLatino/?brand_redir=173259534981">Facebook</a></li>
+        <li class="contenido-footer">Catalina Rosella</li>
+        <li class="contenido-footer">Nataly Yemal</li>
+        <li class="contenido-footer">Valentina Drechsler</li>
           </ul>
         </div>
      </footer>
