--- a/tracks.html
+++ b/tracks.html
@@ -35,28 +35,35 @@
         </header>
     </div>
     <!-- aca -->
-    <h1>Escuchando...</h1>
+    <!-- <h1>Escuchando...</h1>
     <h2 class="titulo"></h2>   
     <h3 class="interprete">banda: </h3>
-    <p class="album">Álbum al que petenece: </p>
+    <p class="album">Álbum al que petenece: </p> -->
 
-    <p><a href="" class="agregar">Agregar a playlist</a></p>
+<!-- <div class="escuchar"> -->
+    
+    <!-- <p><a href="" class="agregar">Agregar a playlist</a></p> -->
     <p><a href="todotraks.html">Volver a tops</a></p>
-    <p><a href="playlist.html">Ver playlist</a></p>
+    <button class="agregar">Agregar a playlist</button>
+    <button class="verPlaylist"><a href="playlist.html">Ver playlist</a></button>
 
     <iframe scrolling="no" frameborder="0" allowTransparency="true"
-        src="" width="700" height="350">
+        src="" width="700" height="92">
     </iframe>
     <!-- hasta aca -->
+<!-- </div> -->
+
+
     <footer class="footer">
         <div class="futer">
           <ul class="fin">
             <li class="redes-footer"><img class="logoDeezer" src="img/logodeezer.png" alt=""></li>
-            <li class="redes-footer">Twitter</li>
-            <li class="redes-footer">Instagram</li>
-            <li class="contenido-footer">Catalina Rosella</li>
-            <li class="contenido-footer">Nataly Yemal</li>
-            <li class="contenido-footer">Valentina Drechsler</li>
+        <li class="redes-footer"><a class="redes-footer" href="https://twitter.com/deezer?lang=es">Twitter</a></li>
+        <li class="redes-footer"><a class="redes-footer" href="https://www.instagram.com/deezer/?hl=es-la">Instagram</a></li>
+        <li class="redes-footer"><a class="redes-footer" href="https://www.facebook.com/DeezerLatino/?brand_redir=173259534981">Facebook</a></li>
+        <li class="contenido-footer">Catalina Rosella</li>
+        <li class="contenido-footer">Nataly Yemal</li>
+        <li class="contenido-footer">Valentina Drechsler</li>
           </ul>
         </div>
      </footer>
