--- a/detail.html
+++ b/detail.html
@@ -62,9 +62,9 @@
     <h2 class="populares">Populares</h2>
     <div class="container">
         <ul class="popular-song">
-            <div class="boton-buscar">
-                <button class="boton">ADD TO PLAYLIST </button>
-        </div>
+            <!-- <div class="boton-buscar">
+                <button class="agregar">ADD TO PLAYLIST </button>
+        </div> -->
             <!-- <li></li>
             <li>2. In Your Eyes</li>
             <li>3. After Hours</li>
