--- a/todoslostracks.html
+++ b/todoslostracks.html
@@ -24,10 +24,13 @@
             <button class='boton-buscador' type="submit">Buscar</button>
         </form>
       </div>
-    <section class="foto-bandas">
-        <div class="fotos">
-        </div>
-    </section>
+    <div class="fotobandas">
+        <ul class="fotos">
+        </ul>
+    </div>
+
+
+    
 
     <footer class="footer">
         <div class="futer">
