--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </div>
 
 
-   <footer class="todos">   
+   <section class="todos">   
        <section class="tracks">
         <h2>TOP ARTISTS</h2>
         <ul class="artist">
@@ -134,7 +134,7 @@
             <ul class="generos">
             </ul>
        </section>
-   </footer>
+   </section>
    <section class="foto-bandas">
        <div class="fotos">
          <!-- <a href="detail.html"><img class="Theweeknd" src="img/theweekend.jpg" alt="Theweeknd" srcset=""></a>
