--- a/playlist.html
+++ b/playlist.html
@@ -37,7 +37,7 @@
         <ul class="playlistWrapper">
     
         </ul>
-        <button class="agregar">Agregar a playlist</button>
+        <!-- <button class="agregar">Agregar a playlist</button> -->
         <!-- <p><a href="todotraks.html">Volver a tops</a></p>
         <button class="agregar">Agregar a playlist</button>
         <button class="verPlaylist"><a href="playlist.html">Ver playlist</a></button>
@@ -62,6 +62,10 @@
 <script src="playlist.js"></script>
 </body>
 </html>
+
+
+
+
 
 <!-- <li><img class= "fotoartista" src="" alt="" srcset=""></li>
     <li class="encabezado">Canción</li>
