--- a/resultados.html
+++ b/resultados.html
@@ -8,6 +8,7 @@
     <title>Búsqueda</title>
 </head>
 <body>
+
     <div class="grid-container">
         <ul>
             <li><a href="index.html"><img class="logo" src="img/logo2.jpeg" alt="logo" srcset=""></a></li>
@@ -21,6 +22,9 @@
 
 <h1 class="display-resultados">Resultados de la Busqueda</h1> 
 <!-- <div id="spinner"></div>  -->
+<div class="loader">
+    <img src="img/loader.gif" alt="">
+</div>
 
 <section class="foto-bandas"> 
     <div class="fotos">
