--- a/tracks.html
+++ b/tracks.html
@@ -43,10 +43,11 @@
 <!-- <div class="escuchar"> -->
     
     <!-- <p><a href="" class="agregar">Agregar a playlist</a></p> -->
-    <p><a href="todoslostracks.html">Volver a tops</a></p>
+<div class="botonsitos">
+    <button class="volver"><a href="todoslostracks.html">Volver a lista de tracks</a></button>
     <button class="agregar">Agregar a playlist</button>
     <button class="verPlaylist"><a href="playlist.html">Ver playlist</a></button>
-
+</div>
     <iframe scrolling="no" frameborder="0" allowTransparency="true"
         src="" width="700" height="92">
     </iframe>
@@ -71,6 +72,6 @@
  
     
 
-    <script src="todoslostracks.js"></script>
+    <script src="tracks.js"></script>
 </body>
 </html>
