--- a/todoslostracks.html
+++ b/todoslostracks.html
@@ -24,11 +24,10 @@
             <button class='boton-buscador' type="submit">Buscar</button>
         </form>
       </div>
-    <div class="fotobandas">
-        <ul class="fotos">
+    <div class="fotoban">
+        <ul class="fotulis">
         </ul>
     </div>
-
 
     <footer class="footer">
         <div class="futer">
