--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
         <li><a class="titulos" href="artistastodos.html">ARTIST</a></li>
         <li class="titulop"><a class="titulos" href="playlist.html"> PLAYLIST</a></li>
       </ul> 
+    
+        <section class="bienvenida">
+            <article>
+                <p id="titulo">¡EMPECEMOS!</p>
+                <p id="saludo"></p>
+                <span>Hacé click aquí para elegir a tus personajes favoritos</span>
+            </article>
+        </section>
   </div>
   <div class="buscador">
   <h1 class="ocultar">Buscador</h1>
@@ -148,9 +156,9 @@
         <li class="redes-footer"><a class="redes-footer" href="https://twitter.com/deezer?lang=es">Twitter</a></li>
         <li class="redes-footer"><a class="redes-footer" href="https://www.instagram.com/deezer/?hl=es-la">Instagram</a></li>
         <li class="redes-footer"><a class="redes-footer" href="https://www.facebook.com/DeezerLatino/?brand_redir=173259534981">Facebook</a></li>
-        <li class="contenido-footer">Catalina Rosella</li>
-        <li class="contenido-footer">Nataly Yemal</li>
-        <li class="contenido-footer">Valentina Drechsler</li>
+        <p class="contenido-footer">Catalina Rosella</p>
+        <p class="contenido-footer">Nataly Yemal</p>
+        <p class="contenido-footer">Valentina Drechsler</p>
         </ul>
       </div>
    </footer>
